--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,217 +1,218 @@
 :root {
-    --font-size: 13;
-    --font-size-hints: 12;
-    --font-size-url: 12;
+  --vimium-font-size: 13;
+  --vimium-font-size-hints: 12;
+  --vimium-font-size-url: 12;
 
-    --font-weight: normal;
-    --font-weight-medium: medium;
-    --font-weight-bold: bold;
+  --vimium-font-weight: normal;
+  --vimium-font-weight-medium: medium;
+  --vimium-font-weight-bold: bold;
 
-    --font: system-ui, "Helvetica Neue", "Helvetica", "Arial", sans-serif; /* Font used in the UI */
-    
-    --shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    --shadow-vomnibar: 0 2px 16px rgba(0,0,0,0.3);
+  --vimium-font: system-ui, "Helvetica Neue", "Helvetica", "Arial", sans-serif; /* Font used in the UI */
 
-/* -------- VOMNIBAR & HUD -------- */
-    --fg: #FFFFFF;
-    --fg-dark: #ffffff65;
-    --fg-selected: #d4e7ff;
+  --vimium-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --vimium-shadow-vomnibar: 0 2px 16px rgba(0, 0, 0, 0.3);
 
-    --bg: #2A2A2E;
-    --bg-searcharea: #222225;
-    --bg-selected: #2165D9;
+  /* -------- VOMNIBAR & HUD -------- */
+  --vimium-fg: #ffffff;
+  --vimium-fg-dark: #ffffff65;
+  --vimium-fg-selected: #d4e7ff;
 
-    --border: #404046;
+  --vimium-bg: #2a2a2e;
+  --vimium-bg-searcharea: #222225;
+  --vimium-bg-selected: #2165d9;
 
-/* -------- HINTS -------- */
-    --bg-hints: #FFD752;      /* Background color of link hints */
-    --border-hints: #F4CA46;  /* Border color of link hints */
-    --fg-hints: #000000;      /* Text color of link hints, (don't forget to change `#vimiumHintMarkerContainer div > .matchingCharacter ~ span`) */
+  --vimium-border: #404046;
+
+  /* -------- HINTS -------- */
+  --vimium-bg-hints: #ffd752; /* Background color of link hints */
+  --vimium-border-hints: #f4ca46; /* Border color of link hints */
+  --vimium-fg-hints: #000000; /* Text color of link hints, (don't forget to change `#vimiumHintMarkerContainer div > .matchingCharacter ~ span`) */
 }
 
 /* --------------------------------- CSS --------------------------------- */
 
 /* -------- HINTS -------- */
-#vimiumHintMarkerContainer div.internalVimiumHintMarker, #vimiumHintMarkerContainer div.vimiumHintMarker {
-    background: var(--bg-hints);
-    border: 1px solid var(--border-hints);
-    box-shadow: var(--shadow);
-    padding: 2px 3px;
+#vimiumHintMarkerContainer div.internalVimiumHintMarker,
+#vimiumHintMarkerContainer div.vimiumHintMarker {
+  background: var(--vimium-bg-hints);
+  border: 1px solid var(--vimium-border-hints);
+  box-shadow: var(--vimium-shadow);
+  padding: 2px 3px;
 }
 
 #vimiumHintMarkerContainer div span {
-    color: var(--fg-hints);
-    font-family: var(--font);
-    font-size: var(--font-size-hints);
-    font-weight: var(--font-weight-bold);
-    text-shadow: none;
+  color: var(--vimium-fg-hints);
+  font-family: var(--vimium-font);
+  font-size: var(--vimium-font-size-hints);
+  font-weight: var(--vimium-font-weight-bold);
+  text-shadow: none;
 }
 
 #vimiumHintMarkerContainer div > .matchingCharacter {
-    opacity: 0.3;
+  opacity: 0.3;
 }
 
 #vimiumHintMarkerContainer div > .matchingCharacter ~ span {
-    color: var(--hints-main-fg);
+  color: var(--hints-main-fg);
 }
 
 /* -------- VOMNIBAR -------- */
 #vomnibar {
-    border-radius: 0;
-    border: 0;
-    box-shadow: var(--shadow-vomnibar);
-    left: 50%;
-    margin-left: -320px;
-    max-width: 640px;
-    top: 18px;
+  border-radius: 0;
+  border: 0;
+  box-shadow: var(--vimium-shadow-vomnibar);
+  left: 50%;
+  margin-left: -320px;
+  max-width: 640px;
+  top: 18px;
 }
 
 #vomnibar .vomnibarSearchArea {
-    background: var(--bg-searcharea);
-    border: 0;
-    border-radius: 0;
-    padding: 0;
+  background: var(--vimium-bg-searcharea);
+  border: 0;
+  border-radius: 0;
+  padding: 0;
 }
 
 #vomnibar input {
-    background: var(--bg-searcharea);
-    color: var(--fg);
-    font-family: var(--font);
-    border-radius: 0;
-    border: 0;
-    box-shadow: none;
-    font-size: 24px;
-    height: initial;
-    padding: 16px 24px;
+  background: var(--vimium-bg-searcharea);
+  color: var(--vimium-fg);
+  font-family: var(--vimium-font);
+  border-radius: 0;
+  border: 0;
+  box-shadow: none;
+  font-size: 24px;
+  height: initial;
+  padding: 16px 24px;
 }
 
 #vomnibar ul {
-    background: var(--bg);
-    border-radius: 0;
-    padding: 0;
-    margin: 0;
+  background: var(--vimium-bg);
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
 }
 
 #vomnibar li {
-    background: var(--bg);
-    border: 0;
-    display: flex;
-    line-height: 1;
-    padding: 8px 16px 8px 24px;
+  background: var(--vimium-bg);
+  border: 0;
+  display: flex;
+  line-height: 1;
+  padding: 8px 16px 8px 24px;
 }
 
 #vomnibar li .vomnibarTopHalf,
 #vomnibar li .vomnibarBottomHalf {
-    font-size: var(--font-size);
-    font-family: var(--font);
-    font-weight: var(--font-weight-medium);
-    margin: 0;
-    padding: 0;
+  font-size: var(--vimium-font-size);
+  font-family: var(--vimium-font);
+  font-weight: var(--vimium-font-weight-medium);
+  margin: 0;
+  padding: 0;
 }
 
 #vomnibar li .vomnibarTopHalf {
-    display: flex;
-    flex: 0 0 67%;
-    margin-right: 16px;
+  display: flex;
+  flex: 0 0 67%;
+  margin-right: 16px;
 }
 
 #vomnibar li .vomnibarBottomHalf {
-    flex: 0 0 33%;
+  flex: 0 0 33%;
 }
 
 #vomnibar li .vomnibarSource.vomnibarNoInsertText,
 #vomnibar li .vomnibarSource.vomnibarInsertText {
-    display: none;
+  display: none;
 }
 
 #vomnibar li .vomnibarSource,
 #vomnibar li .vomnibarUrl {
-    color: var(--fg-dark);
+  color: var(--vimium-fg-dark);
 }
 
 #vomnibar li .vomnibarSource {
-    display: block;
-    flex-shrink: 0;
-    font-size: 11px;
-    font-weight: var(--font-weight-bold);
-    line-height: 2;
-    margin-right: 12px;
-    text-transform: uppercase;
+  display: block;
+  flex-shrink: 0;
+  font-size: 11px;
+  font-weight: var(--vimium-font-weight-bold);
+  line-height: 2;
+  margin-right: 12px;
+  text-transform: uppercase;
 }
 
 #vomnibar li .vomnibarTitle,
 #vomnibar li .vomnibarUrl {
-    line-height: 1.6;
+  line-height: 1.6;
 }
 
 #vomnibar li .vomnibarTitle {
-    color: var(--fg);
-    display: block;
-    margin: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  color: var(--vimium-fg);
+  display: block;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #vomnibar li .vomnibarUrl {
-    padding-right: 6px;
-    display: block;
-    margin: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  padding-right: 6px;
+  display: block;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 #vomnibar li .vomnibarMatch {
-    color: inherit;
+  color: inherit;
 }
 
 #vomnibar li .vomnibarTitle .vomnibarMatch {
-    color: var(--fg);  
+  color: var(--vimium-fg);
 }
 
 #vomnibar li.vomnibarSelected {
-    background: var(--bg-selected);
+  background: var(--vimium-bg-selected);
 }
 
 #vomnibar li.vomnibarSelected .vomnibarSource,
 #vomnibar li.vomnibarSelected .vomnibarUrl {
-    color: var(--fg-selected);
+  color: var(--vimium-fg-selected);
 }
 
 #vomnibar li.vomnibarSelected .vomnibarTitle {
-    color: var(--fg);
+  color: var(--vimium-fg);
 }
 
 #vomnibar li.vomnibarSelected .vomnibarMatch {
-    color: inherit;
+  color: inherit;
 }
 
 /* -------- HUD -------- */
 div.vimiumHUD {
-    background: var(--bg);
-    border: 1px solid var(--border);
-    box-shadow: var(--shadow);
-    border-radius: 0px;
+  background: var(--vimium-bg);
+  border: 1px solid var(--vimium-border);
+  box-shadow: var(--vimium-shadow);
+  border-radius: 0px;
 }
 
 div.vimiumHUD span#hud-find-input,
 div.vimiumHUD .vimiumHUDSearchAreaInner {
-    color: var(--fg);
-    font-family: var(--font);
-    font-size: 11;
-    font-weight: var(--font-weight-medium);
+  color: var(--vimium-fg);
+  font-family: var(--vimium-font);
+  font-size: 11;
+  font-weight: var(--vimium-font-weight-medium);
 }
 
 div.vimiumHUD .hud-find {
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 }
 
 div.vimiumHUD .vimiumHUDSearchArea {
-    background-color: transparent;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    padding-left: 5px;
-    padding-right: 3px;
+  background-color: transparent;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 5px;
+  padding-right: 3px;
 }
